--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -7,14 +7,14 @@ block content
         .day
             ol.day__list#slider
                 - const order = [ 0, 1, 2, 3, 4, 5, 6 ]
-                - const date = [ "일", "월", "화", "수", "목", "금", "토"]
+                - const day = [ "일", "월", "화", "수", "목", "금", "토"]
                 each i in order
                     li.day__item
                         .title
                             .title__date
-                                span=thisWeek.thisDate[i]
+                                span=thisWeek.date[i]
                                 |일 
-                                span.day=date[i]
+                                span.day=day[i]
                                 |요일
                             .title__description
                                 if user.plans.description==true
@@ -24,7 +24,7 @@ block content
                         .todolist-box
                             ul.todolist
                                 each item in user.plans
-                                    if item.description==false && thisWeek.yyyymmdd[i]==item.date
+                                    if item.description==false && thisWeek.year[i]==item.year && thisWeek.month[i]==item.month && thisWeek.date[i]==item.date
                                         +planBlock({
                                             title:item.title,
                                             day:item.day
@@ -34,7 +34,9 @@ block content
                                     img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/fire_1f525.png", alt="명언")
                                 input.add-form__input(type="text", name="title", placeholder="할 일")
                                 input(type="hidden", name="category", value="공부")
-                                input(type="hidden", name="date", value=thisWeek.yyyymmdd[i])
+                                input(type="hidden", name="year", value=thisWeek.year[i])
+                                input(type="hidden", name="month", value=thisWeek.month[i])
+                                input(type="hidden", name="date", value=thisWeek.date[i])
                                 //- input(type="hidden", name="description", value="true")
                                 button.add-form__button 추가
         a.next__btn > 
