plans 페이지 plan 삭제 기능 추가
- 삭제할 plan의 id를 전달하여 해당 데이터를 삭제하기 위해 plans.pug와
  planBlock.pug에 데이터 추가
- href를 사용하기 위해 button을 a 태그로 변경. 그랬더니 scss가 제대로
  안먹혀서 수정할 예정

--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -31,10 +31,8 @@ block content
                                     if thisWeek.year[i]==item.year && thisWeek.month[i]==item.month && thisWeek.date[i]==item.date
                                         +planBlock({
                                             title:item.title,
-                                            day:item.day
+                                            id:item._id
                                         })
-                                    else
-                                        p=item.title
                             form.add-form(action=`plans${routes.upload}`, method="post", autocomplete="off") <!--지난 날짜는 보이지 않도록-->
                                 button.description__button(type="button")
                                     img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/fire_1f525.png", alt="명언")
