plans 페이지 수정, 삭제 버튼 scss 수정
- 삭제 기능이 수정 버튼에 들어가있어 수정
- button 태그였던 수정 버튼 a 태그로 수정
- 마우스 hover 시 드러나는 수정, 삭제 버튼의 태그 종류를 바꾸면서 scss가
  먹지 않아 해당 부분 수정

--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -92,19 +92,19 @@ section {
 
 							&:hover {
 								background-color: $hover;
-								button {
+								.button-wrapper {
 									visibility: visible;
 								}
 							}
-						}
 
-						.button-wrapper {
-							float: right;
-							margin: 1px 0 0 5px;
-
-							button {
-								margin-left: 8px;
+							.button-wrapper {
+								float: right;
+								margin: 1px 0 0 5px;
 								visibility: hidden;
+
+								a {
+									margin-left: 8px;
+								}
 							}
 						}
 					}
