plans 페이지 수정버튼 클릭 시 입력창 생성 기능 추가
- 수정 버튼 클릭 시 나타날 입력창 scss 추가
- 토글 기능으로 클릭할 때마다 active 클래스가 추가/제거 되면서 span이
  보였다가 input text 창이 보였다가 반복하도록 설정
- checked 기능과 edit 기능을 사용했을 때 form을 이용해 데이터를 주고받을
  수 있도록 하기위해 planBlock에서 form을 추가
- BEM 방법론대로 class 명을 짓긴 했는데 수정이 필요해보임
- 각 id에 맞게 각각 edit 버튼이 작동해야 하는데, id에 따라 동작하는 것이
  아니라 현재는 어떤 할 일의 edit 버튼을 누르든 가장 첫번째 할 일에
  적용이 되는 문제가 있음. 해결해야 함

--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -69,25 +69,51 @@ section {
 						); // 전체 높이 - 상단 title 높이 - 하단 입력창 높이
 						overflow: auto;
 
-						li {
+						.plan {
 							height: 36px;
 							padding: 8px;
 
-							.check__button {
+							&-check__button {
 								float: left;
 								margin-top: 2px;
 							}
 
-							span {
+							&-title__span {
 								display: inline-block;
-								width: 300px;
-								margin: 3px 0 0 5px;
+								width: 350px;
+								margin: 3px 0 0 8px;
 								font-size: 14px;
+
+								&.active {
+									display: none;
+								}
+							}
+
+							.plan-title__input {
+								width: 355px;
+								border: 1px solid $fill;
+								padding: 3px;
+								margin: -1px 0 0 7px;
+								display: none;
+
+								&.active {
+									display: inline-block;
+								}
 							}
 
 							img {
 								width: 15px;
 								height: 15px;
+							}
+
+							.button-wrapper {
+								float: right;
+								margin: 1px 0 0 5px;
+								visibility: hidden;
+
+								.edit__button {
+									margin-right: 8px;
+								}
 							}
 
 							&:hover {
@@ -97,13 +123,14 @@ section {
 								}
 							}
 
-							.button-wrapper {
-								float: right;
-								margin: 1px 0 0 5px;
-								visibility: hidden;
+							&.checked {
+								span {
+									color: $soft-gray;
+									text-decoration: line-through;
+								}
 
-								a {
-									margin-left: 8px;
+								.button-wrapper {
+									visibility: hidden;
 								}
 							}
 						}
