--- a/src/views/mixins/planBlock.pug
+++ b/src/views/mixins/planBlock.pug
@@ -1,10 +1,13 @@
 mixin planBlock(plans = {})
-    li 
-        button.check__button(type="button")
-            img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/white-heavy-check-mark_2705.png", alt="완료")
-        span=plans.title
-        .button-wrapper
-            a.modify__button(href="#")
-                img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/pencil_270f.png", alt="수정")
-            a.remove__button(href=routes.deletePlan(plans.id))
-                img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/cross-mark_274c.png", alt="삭제")
+    li.plan
+        form(method="post")
+            button.plan-check__button(type="submit", formaction=routes.checkedPlan(plans.id))
+                img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/white-heavy-check-mark_2705.png", alt="완료")
+            input(type="hidden", name="completed", value=true)
+            span.plan-title__span=plans.title
+            input.plan-title__input(type="text", name="title", value=plans.title)
+            .button-wrapper
+                a.edit__button(href="#", onclick="editBtn();")
+                    img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/pencil_270f.png", alt="수정")
+                a.remove__button(href=routes.deletePlan(plans.id))
+                    img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/cross-mark_274c.png", alt="삭제")
