--- a/src/views/mixins/planBlock.pug
+++ b/src/views/mixins/planBlock.pug
@@ -6,9 +6,12 @@ mixin planBlock(plans = {})
                 img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/white-heavy-check-mark_2705.png", alt="완료")
             input(type="hidden", name="completed", value=true)
             span.plan-title__span(id=`span${plans.id}`)=plans.title
-            input.plan-title__input(type="text", name="title", id="input"+plans.id, value=plans.title)
-            .button-wrapper
-                a.edit__button(href="#", onclick=`editPlan(${plansId})`)
-                    img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/pencil_270f.png", alt="수정")
-                a.remove__button(href=routes.deletePlan(plans.id))
-                    img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/cross-mark_274c.png", alt="삭제")
+            input.plan-title__input(type="text", name="title", id=`input${plans.id}`, value=plans.title)
+            .buttons
+                .buttons-default(id=`defaultBtns${plans.id}`)
+                    a.edit__button(href="#", onclick=`editPlan(${plansId})`)
+                        img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/pencil_270f.png", alt="수정")
+                    a.remove__button(href=routes.deletePlan(plans.id))
+                        img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/cross-mark_274c.png", alt="삭제")
+                .buttons-edit(id=`editBtns${plans.id}`)
+                    a.edit-check__button(href="#") 확인
