plans 페이지 수정 기능 추가
- form 안에 완료 버튼의 submit과 수정 버튼의 submit을 모두 사용하기 위해
  input type을 submit으로 주고 formaction을 사용
- 아직은 title만 작성할 수 있기 때문에 controller의 업데이트 내용도
  title만 있음. 내용 추가 시 수정 예정
- 수정할 때 엔터 사용 시 수정 버튼이 아닌 완료 버튼이 실행되는 것
  수정해야 함

--- a/src/views/mixins/planBlock.pug
+++ b/src/views/mixins/planBlock.pug
@@ -14,4 +14,4 @@ mixin planBlock(plans = {})
                     a.remove__button(href=routes.deletePlan(plans.id))
                         img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/cross-mark_274c.png", alt="삭제")
                 .buttons-edit(id=`editBtns${plans.id}`)
-                    a.edit-check__button(href="#") 확인
+                    input.edit-check__button(type="submit", formaction=routes.editPlan(plans.id), value="확인")
