--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -144,8 +144,9 @@ section {
 
 									.edit-check__button {
 										border: 1px solid $text;
-										padding: 4px 6px 4px 6px;
-										font-size: 14px;
+										margin: -5px 0;
+										padding: 3px 6px 4px 6px;
+										font-size: 13px;
 										color: $text;
 										background-color: white;
 									}
