plans 페이지 완료 버튼 기능 추가
- DB의 complete를 true로 수정하여 저장하기 위해 controller에서
  findOneAndUpdate 사용
- input type=submit에 img 태그를 넣으면 오류가 나므로 submit 버튼으로
  사용될 image를 정의하는 input type=image를 활용

--- a/src/views/mixins/planBlock.pug
+++ b/src/views/mixins/planBlock.pug
@@ -2,9 +2,8 @@ mixin planBlock(plans = {})
     li.plan
         form(method="post")
             - const plansId = "'" + plans.id + "'"
-            button.plan-check__button(type="submit", formaction=routes.checkedPlan(plans.id))
-                img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/white-heavy-check-mark_2705.png", alt="완료")
-            input(type="hidden", name="completed", value=true)
+            input(type="hidden", name="completed", value="true")
+            input.plan-check__button(type="image", formaction=routes.checkPlan(plans.id), src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/white-heavy-check-mark_2705.png", alt="완료")
             span.plan-title__span(id=`span${plans.id}`)=plans.title
             input.plan-title__input(type="text", name="title", id=`input${plans.id}`, value=plans.title)
             .buttons
