plans 페이지 완료 기능 추가
- db에서 가져온 데이터가 true일 때는 false로 바꿔주고, false일 때는
  true로 바꿔 저장해기 위해 controller에서 3항 연산자를 사용
- completed일 때 수정할 수 없도록 버튼을 숨기고, 완료되었다는 것을
  알아볼 수 있도록 하기 위해 scss 수정

--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -71,7 +71,6 @@ section {
 						); // 전체 높이 - 상단 title 높이 - 하단 입력창 높이
 						overflow: auto;
 
-						// 할 일(li)
 						.plan {
 							height: 36px;
 							padding: 8px;
@@ -103,9 +102,18 @@ section {
 								margin: 3px 0 0 8px;
 								font-size: 14px;
 
+								&.completed {
+									color: $soft-gray;
+									text-decoration: line-through;
+								}
+
 								&.active {
 									display: none;
 								}
+							}
+
+							.buttons.active {
+								visibility: hidden;
 							}
 
 							// 수정 버튼 클릭 시 보이는 text 박스
@@ -155,18 +163,6 @@ section {
 									&.active {
 										display: inline-block;
 									}
-								}
-							}
-
-							// 완료 버튼 클릭 시
-							&.checked {
-								span {
-									color: $soft-gray;
-									text-decoration: line-through;
-								}
-
-								.buttons {
-									visibility: hidden;
 								}
 							}
 						}
