--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -30,8 +30,9 @@ block content
                                 each item in user.plans
                                     if thisWeek.year[i]==item.year && thisWeek.month[i]==item.month && thisWeek.date[i]==item.date
                                         +planBlock({
+                                            id:item._id,
                                             title:item.title,
-                                            id:item._id
+                                            completed: item.completed
                                         })
                             form.add-form(action=`plans${routes.upload}`, method="post", autocomplete="off") <!--지난 날짜는 보이지 않도록-->
                                 button.description__button(type="button")
