--- a/src/views/mixins/planBlock.pug
+++ b/src/views/mixins/planBlock.pug
@@ -2,13 +2,13 @@ mixin planBlock(plans = {})
     li.plan
         form(method="post")
             - const plansId = "'" + plans.id + "'"
-            input.active(type="hidden", name="completed", value=plans.completed)
+            input(type="hidden", name="completed", value=plans.completed)
             input.plan-check__button(type="image", formaction=routes.checkPlan(plans.id), src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/white-heavy-check-mark_2705.png", alt="완료")
             - if (plans.completed === "false")
                 span.plan-title__span(id=`span${plans.id}`)=plans.title
             - else
                 span.plan-title__span.completed(id=`span${plans.id}`)=plans.title
-            input.plan-title__input(type="text", name="title", id=`input${plans.id}`, value=plans.title)
+            input.plan-title__input(type="text", name="title", id=`input${plans.id}`, value=plans.title, onkeypress="if(event.keyCode=='13'){event.preventDefault();}")
             .buttons
                 .buttons-default(id=`defaultBtns${plans.id}`)
                     - if (plans.completed === "false")
