--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -44,3 +44,5 @@ block content
                                 input(type="hidden", name="date", value=thisWeek.date[i])
                                 button.add-form__button 추가
         a.next__btn > 
+        ul.pagination
+            li sdf
