feat: plans 페이지 출력 날짜 수정
- 오늘이 포함된 주의 일요일부터 토요일까지 출력되던 것을 오늘의 하루
  전부터 5일 뒤까지 날짜가 출력되도록 수정. 어제 날짜가 보이는 이유는
  00시가 지나서 다음날이 되더라도 하루의 마무리가 새벽 1시, 3시가 될 수
  있기 때문이고 지금은 첫 페이지에 슬라이드의 원하는 위치가 오도록 할 수
  없어서 임시 방편이기도 하다. 그리고 일주일간은 할 일이 생기면 바로
  추가할 수 있도록 일주일까지 나오도록 했다.
- 모바일에서는 오늘 날짜가 보이되 기존처럼 화면 가득 보이지 않도록 수정
  기존처럼 화면을 가득 채울 경우 scss를 수정할 부분이 많을 것 같아 임시
  방편이지만 다음 버튼이나 이전 버튼 클릭 시 하루씩 넘어가지 않고 3일씩
  넘어가는 문제가 있어서 해결해야 함

--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -24,7 +24,8 @@ section {
 		.day__list {
 			.day__item {
 				float: left;
-				height: 609px;
+				width: 440px;
+				height: 589px;
 				border: 1px solid $border;
 				background: white;
 				justify-content: center;
@@ -65,7 +66,7 @@ section {
 				.todolist-box {
 					.todolist {
 						position: absolute;
-						width: 439px;
+						width: 438px;
 						height: calc(
 							100% - 102px - 55px
 						); // 전체 높이 - 상단 title 높이 - 하단 입력창 높이
@@ -178,9 +179,9 @@ section {
 				}
 
 				.add-form {
-					width: 439px;
+					width: 438px;
 					position: absolute;
-					bottom: 0;
+					bottom: 0px;
 					padding-bottom: 20px;
 					height: 55px;
 					background: $fill;
@@ -223,6 +224,20 @@ section {
 						}
 					}
 				}
+			}
+		}
+	}
+
+	.pagination__wrapper {
+		margin: 0 auto;
+		width: 176px;
+
+		.pagination {
+			margin-top: 20px;
+
+			&__list {
+				float: left;
+				margin: 0 5px;
 			}
 		}
 	}
