--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -7,14 +7,14 @@ block content
         .day
             ol.day__list#slider
                 - const order = [ 0, 1, 2, 3, 4, 5, 6 ]
-                - const day = [ "일", "월", "화", "수", "목", "금", "토"]
+                - const days = [ "일", "월", "화", "수", "목", "금", "토"]
                 each i in order
                     li.day__item
                         .title
                             .title__date
                                 span=thisWeek.date[i]
                                 |일 
-                                span.day=day[i]
+                                span.day=days[thisWeek.day[i]]
                                 |요일
                             .title__description
                                 if user.sentence.length==0
@@ -34,15 +34,15 @@ block content
                                             title:item.title,
                                             completed: item.completed
                                         })
-                            form.add-form(action=`plans${routes.upload}`, method="post", autocomplete="off") <!--지난 날짜는 보이지 않도록-->
-                                button.description__button(type="button")
-                                    img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/fire_1f525.png", alt="명언")
-                                input.add-form__input(type="text", name="title", placeholder="할 일")
-                                input(type="hidden", name="category", value="공부")
-                                input(type="hidden", name="year", value=thisWeek.year[i])
-                                input(type="hidden", name="month", value=thisWeek.month[i])
-                                input(type="hidden", name="date", value=thisWeek.date[i])
-                                button.add-form__button 추가
+                        form.add-form(action=`plans${routes.upload}`, method="post", autocomplete="off") <!--지난 날짜는 보이지 않도록-->
+                            button.description__button(type="button")
+                                img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/fire_1f525.png", alt="명언")
+                            input.add-form__input(type="text", name="title", placeholder="할 일")
+                            input(type="hidden", name="category", value="공부")
+                            input(type="hidden", name="year", value=thisWeek.year[i])
+                            input(type="hidden", name="month", value=thisWeek.month[i])
+                            input(type="hidden", name="date", value=thisWeek.date[i])
+                            button.add-form__button 추가
         a.next__btn > 
-        ul.pagination
-            li sdf
+        .pagination__wrapper
+            ol.pagination
