기능 추가: plans 페이지 슬라이드 페이징 버튼 추가
일요일에서 월요일까지 슬라이드로 바로 갈 수 있는 페이징 버튼을
추가하고 최소한의 scss로 다듬었다. 클릭하면 원하는 위치로 갈 수 있는
기능을 추가하고 scss를 더 추가해야 한다.

--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -24,7 +24,7 @@ section {
 		.day__list {
 			.day__item {
 				float: left;
-				height: 609px;
+				height: 589px;
 				border: 1px solid $border;
 				background: white;
 				justify-content: center;
@@ -223,6 +223,19 @@ section {
 						}
 					}
 				}
+			}
+		}
+	}
+
+	.pagination__wrapper {
+		margin: 0 auto;
+		width: 176px;
+
+		.pagination {
+			margin-top: 20px;
+			&__list {
+				float: left;
+				margin: 0 5px;
 			}
 		}
 	}
