feat: 페이징 기능 수정
- 기존 plans.js의 페이징 관련 내용을 삭제하고 plans.pug에서 반복문으로
  추가. 7일간의 인덱스만 필요했기 때문에 복잡한 js가 필요하지 않다고
  판단하여 pug 파일 자체에서 반복문으로 해결
- week.js에서 원하는 날짜 데이터가 잘 들어가고 있는지 확인하기 위해
  추가했던 console.log 삭제
- 충돌났던 scss 파일 수정

--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -5,9 +5,9 @@ block content
     section
         a.prev__btn < 
         .day
+            - const order = [ 0, 1, 2, 3, 4, 5, 6 ]
+            - const days = [ "일", "월", "화", "수", "목", "금", "토"]
             ol.day__list#slider
-                - const order = [ 0, 1, 2, 3, 4, 5, 6 ]
-                - const days = [ "일", "월", "화", "수", "목", "금", "토"]
                 each i in order
                     li.day__item
                         .title
@@ -46,3 +46,6 @@ block content
         a.next__btn > 
         .pagination__wrapper
             ol.pagination
+                each i in order
+                    li.pagination__list
+                        a(href="#")=days[thisWeek.day[i]]
