feat: plans 페이지 페이징 기능 삭제
plans 페이지로 이동했을 때 오늘 날짜로 시작할 수 있도록 기능을 추가하여
페이징 기능의 필요성이 줄어들었다. 당장 더 중요한 다른 기능을 추가하는
것이 우선이라고 생각하여 페이징 기능을 삭제하고 그에 맞도록 scss 수정

--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -30,7 +30,7 @@ body {
 	width: 100%;
 	position: relative;
 	float: left;
-	min-height: 92vh;
+	min-height: 91vh;
 	background-color: $background;
 	display: flex;
 	justify-content: center;
@@ -44,7 +44,7 @@ header {
 	height: 60px;
 	padding-top: 25px;
 	position: fixed;
-	top: 0;
+	top: 2px;
 	left: 0;
 	z-index: 9000;
 	width: 100%;
