feat: plans 페이지 버튼 디자인 수정
원래 불 모양 버튼 클릭 시 오늘의 한 마디를 입력할 수 있도록 하려고
했는데, 버튼 클릭 시 위로 슬라이드 되면서 세부적인 내용을 더 작성할 수
있도록 바꾸기 위해 버튼을 화살표 모양으로 수정

--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -189,13 +189,14 @@ section {
 
 					.description__button {
 						position: relative;
-						top: 7px;
+						top: 1px;
 						margin-left: 14px;
-						margin-right: 5px;
-						font-size: 19px;
+						margin-right: 9px;
+						font-size: 15px;
+						color: $text-deep;
 
-						img {
-							width: 21px;
+						&:hover {
+							color: $text;
 						}
 					}
 
@@ -215,7 +216,7 @@ section {
 					&__button {
 						margin-left: 8px;
 						width: 50px;
-						height: 30px;
+						height: 26px;
 						border: none;
 						background: $add-button;
 						color: $text;
