--- a/src/assets/scss/config/_variables.scss
+++ b/src/assets/scss/config/_variables.scss
@@ -11,6 +11,7 @@ $border: rgb(143, 190, 135);
 $fill: rgb(184, 219, 163);
 $hover: rgb(234, 243, 225);
 $text: rgb(98, 150, 89);
+$text-deep: rgb(84, 110, 79);
 $text-hover: rgb(171, 212, 164);
 $text-drag: rgb(216, 255, 198);
 $header-button: rgb(142, 179, 121);
