--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -35,8 +35,7 @@ block content
                                             completed: item.completed
                                         })
                         form.add-form(action=`plans${routes.upload}`, method="post", autocomplete="off") <!--지난 날짜는 보이지 않도록-->
-                            button.description__button(type="button")
-                                img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/fire_1f525.png", alt="명언")
+                            button.description__button(type="button") ▲
                             if i > 0
                                 input.add-form__input(type="text", name="title", placeholder="할 일")
                             else
