feat: 게스트 페이지 추가
- 게스트 페이지에서는 버튼 및 기능을 사용할 수 없도록 하기 위해 새로운
  페이지와 block 생성
- 게스트로 페이지를 볼 수 있도록 게스트 페이지를 홈 화면 버튼과 연결

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -17,7 +17,7 @@ block content
                             | 계정이 없다면? 
                             a.sign-up__link(href="#", onclick="toggleForm();") 회원가입 
                             | 또는 
-                            a.guest__link(href=routes.plans) 게스트로 구경
+                            a.guest__link(href=routes.guestPlans) 게스트로 구경
             .user.signup
                 .form-box
                     form.form-box__form(method="post")
