feat: plans 페이지 전체적인 scss 수정
- 바꾼 폰트의 line-height가 너무 좁아 가독성이 떨어져 해당 부분 수정.
- 위 내용 수정 후 title이 너무 위에 붙어보여 간격 조정
- 리스트에 나오는 할 일이 두 줄 이상일 때 마우스를 hover하면 한 줄
  scss가 적용된 채로 나와서 plan class의 height 삭제
- 할 일이 두 줄 이상일 때 할 일 완료, 수정, 삭제, 수정 확인 버튼이 수직
  가운데 정렬이 안되어서 position을 활용하여 해결

--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -10,6 +10,8 @@
 * {
 	font-family: "NEXON Lv2 Gothic";
 	font-style: normal;
+	letter-spacing: 0.8px;
+	line-height: 1.2rem;
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
