--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -43,6 +43,7 @@ section {
 						font-weight: 600;
 						text-transform: uppercase;
 						letter-spacing: 2px;
+						margin: 3px 0;
 						width: 100%;
 						color: $title;
 					}
@@ -63,6 +64,7 @@ section {
 					}
 				}
 
+				// 할 일 리스트 출력 창
 				.todolist-box {
 					.todolist {
 						position: absolute;
@@ -73,7 +75,8 @@ section {
 						overflow: auto;
 
 						.plan {
-							height: 36px;
+							position: relative;
+							width: 100%;
 							padding: 8px;
 
 							&:hover {
@@ -88,20 +91,22 @@ section {
 							.plan-check__button,
 							img {
 								width: 15px;
-								height: 15px;
+								position: absolute;
+								top: 0;
+								bottom: 0;
+								margin: auto;
 							}
 
 							// 완료 버튼
 							&-check__button {
 								float: left;
-								margin-top: 2px;
 							}
 
 							// default로 보이는 할 일
 							&-title__span {
 								display: inline-block;
-								width: 350px;
-								margin: 3px 0 0 8px;
+								width: 360px;
+								margin-left: 23px;
 								font-size: 14px;
 
 								&.completed {
@@ -123,7 +128,7 @@ section {
 								width: 355px;
 								border: 1px solid $fill;
 								padding: 4px;
-								margin: -3px 0 0 7px;
+								margin-left: 23px;
 								display: none;
 
 								&.active {
@@ -135,13 +140,18 @@ section {
 							// 기본적으로 보이는 수정, 삭제 버튼
 							.buttons {
 								float: right;
-								margin: 1px 0 0 5px;
 								display: none;
 
 								// 수정 버튼 클릭 전 기본 버튼
 								&-default {
+									position: absolute;
+									right: 21px;
+									top: 0;
+									bottom: 0;
+									margin: auto;
+
 									.edit__button {
-										margin-right: 8px;
+										margin-right: 21px;
 									}
 
 									&.active {
@@ -155,7 +165,6 @@ section {
 
 									.edit-check__button {
 										border: 1px solid $text;
-										margin: -5px 0;
 										padding: 3px 6px 4px 6px;
 										font-size: 13px;
 										color: $text;
@@ -171,6 +180,7 @@ section {
 					}
 				}
 
+				// 할 일 입력 관련
 				.display-button {
 					position: relative;
 					width: 25px;
