feat: dropdown 메뉴 회원 관련 문구 수정
로그인 하지 않은 경우에 signed in 대신 입장했다는 entered in이 맞을 것
같아 수정

--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -6,10 +6,11 @@ header
                 h1.logo__text PLANET
             .dropdown-menu
                 h3
-                    span Signed in as 
                     if user==null
+                        span Entered in as 
                         span.id 손님
                     else
+                        span Signed in as 
                         span.id=user.id
                 ul
                     if !user
