--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -197,16 +197,25 @@ section {
 					height: 55px;
 					background: $fill;
 
-					.description__button {
+					.option__button {
+						width: 26px;
+						height: 26px;
 						position: relative;
-						top: 1px;
-						margin-left: 14px;
-						margin-right: 9px;
+						top: 8px;
+						margin-left: 10px;
+						margin-right: 7px;
 						font-size: 15px;
 						color: $text-deep;
+						opacity: 0.93;
+						background: $input-focus;
+						border: 1px solid $border;
+
+						img {
+							width: 24px;
+						}
 
 						&:hover {
-							color: $text;
+							opacity: 1;
 						}
 					}
 
@@ -224,15 +233,16 @@ section {
 					}
 
 					&__button {
-						margin-left: 8px;
 						width: 50px;
-						height: 26px;
-						border: none;
+						height: 28px;
+						margin-left: 8px;
+						border: 1px solid $border;
 						background: $add-button;
 						color: $text;
+						opacity: 0.93;
 
 						&:hover {
-							background-color: white;
+							opacity: 1;
 						}
 					}
 				}
