--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -194,20 +194,21 @@ section {
 					position: absolute;
 					bottom: 0px;
 					padding-bottom: 20px;
-					height: 55px;
+					height: 50px;
 					background: $fill;
 
 					.option__button {
 						width: 26px;
-						height: 26px;
+						height: 28px;
 						position: relative;
 						top: 8px;
 						margin-left: 10px;
 						margin-right: 7px;
+						padding-top: 1px;
 						font-size: 15px;
 						color: $text-deep;
 						opacity: 0.93;
-						background: $input-focus;
+						background: $add-button;
 						border: 1px solid $border;
 
 						img {
@@ -223,7 +224,7 @@ section {
 						width: 326px;
 						height: 26px;
 						border-bottom: 1px solid gray;
-						margin-top: 15px;
+						margin-top: 12px;
 						padding: 0 8px;
 						background: transparent;
 
@@ -236,6 +237,7 @@ section {
 						width: 50px;
 						height: 28px;
 						margin-left: 8px;
+						padding-top: 2px;
 						border: 1px solid $border;
 						background: $add-button;
 						color: $text;
