feat: plans 입력창 scss 변경
할 일 왼편 버튼 클릭하여 숨겨진 detail box가 슬라이드 될 때, detail
box의 기본적인 틀에 관련된 scss를 추가하고 깨지는 scss를 수정

--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -199,20 +199,19 @@ section {
 
 					.option__button {
 						width: 26px;
-						height: 28px;
 						position: relative;
-						top: 8px;
+						top: 11px;
 						margin-left: 10px;
 						margin-right: 7px;
-						padding-top: 1px;
 						font-size: 15px;
-						color: $text-deep;
 						opacity: 0.93;
-						background: $add-button;
-						border: 1px solid $border;
 
 						img {
 							width: 24px;
+							height: 28px;
+							padding-bottom: 2px;
+							background: $add-button;
+							border: 1px solid $border;
 						}
 
 						&:hover {
@@ -245,6 +244,20 @@ section {
 
 						&:hover {
 							opacity: 1;
+						}
+					}
+
+					&.active {
+						bottom: 200px;
+						
+					}
+
+					.add-detail {
+						height: 200px;
+						display: none;
+
+						&.active {
+							display: inline;
 						}
 					}
 				}
