--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -209,9 +209,26 @@ section {
 						img {
 							width: 24px;
 							height: 28px;
-							padding-bottom: 2px;
+							padding-top: 1px;
+							padding-bottom: 1px;
 							background: $add-button;
 							border: 1px solid $border;
+						}
+
+						.up__image {
+							display: inline;
+
+							&.active {
+								display: none;
+							}
+						}
+
+						.down__image {
+							display: none;
+
+							&.active {
+								display: inline;
+							}
 						}
 
 						&:hover {
